syntax ="proto3";

package  PublisherProto;

option java_package = "com.sqspublish.PublisherProto";
option java_outer_classname = "PublisherProto";
option java_multiple_files = true;

service PublisherService {
  rpc postPublisherPayload(PublisherPostReq) returns (PublisherPostRes) ;
}

message PublisherPostReq{
  string PublisherName=1;
  string PublisherMessage=2;
}

message PublisherPostRes{
  string ack=1;
}
